--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.home.CharacterListFragment"
+    tools:context=".views.characterSheets.CharacterListFragment"
     android:padding="6dp">
 
     <androidx.recyclerview.widget.RecyclerView
